<resources>
    <string name="pref_video_quality_entry_fwvga">FWVGA</string>
    <string name="pref_video_quality_entry_wvga">WVGA</string>
    <string name="pref_video_quality_entry_vga">VGA</string>
    <string name="pref_video_quality_entry_wqvga">WQVGA</string>
    <string name="pref_video_quality_entry_cif">CIF</string>
    <string name="pref_video_quality_entry_qvga">QVGA</string>
    <string name="pref_video_quality_entry_qcif">QCIF</string>
    <string name="pref_camera_powermode_title">Power Mode</string>
    <string name="pref_camera_powermode_entry_lp">Low_Power</string>
    <string name="pref_camera_powermode_entry_np">Normal_Power</string>
    <string name="pref_camera_powermode_value_lp">Low_Power</string>
    <string name="pref_camera_powermode_value_np">Normal_Power</string>
    <string name="pref_camera_powermode_default">Normal_Power</string>
    <string name="pref_camera_autoexposure_default">frame-average</string>
    <string name="pref_camera_autoexposure_title">Select Auto Exposure Mode</string>
    <string name="pref_camera_autoexposure_entry_frameaverage">Frame Average</string>
    <string name="pref_camera_autoexposure_entry_centerweighted">Center Weighted</string>
    <string name="pref_camera_autoexposure_entry_spotmetering">Spot Metering</string>
    <string name="pref_camera_autoexposure_value_frameaverage">frame-average</string>
    <string name="pref_camera_autoexposure_value_centerweighted">center-weighted</string>
    <string name="pref_camera_autoexposure_value_spotmetering">spot-metering</string>
    <string name="pref_camera_videoencoder_title">Video Encoder</string>
    <string name="pref_camera_videoencoder_entry_0">MPEG4</string>
    <string name="pref_camera_videoencoder_entry_1">H263</string>
    <string name="pref_camera_videoencoder_entry_2">H264</string>
    <string name="pref_camera_videoencoder_default">h264</string>
    <string name="pref_camera_videoencoder_dialogtitle">Video Encoder</string>
    <string name="pref_camera_audioencoder_default">aac</string>
    <string name="pref_camera_audioencoder_title">Audio Encoder</string>
    <string name="pref_camera_audioencoder_entry_0">AMRNB</string>
    <string name="pref_camera_audioencoder_entry_1">AAC</string>
    <string name="pref_camera_video_duration_default">10</string>
    <string name="pref_camera_video_duration_title">Video duration</string>
    <string name="pref_camera_video_duration_entry_mms">30 seconds(MMS)</string>
    <string name="pref_camera_video_duration_entry_10">10 minutes</string>
    <string name="pref_camera_video_duration_entry_30">30 minutes</string>
    <string name="pref_camera_skinToneEnhancement_default">disable</string>
    <string name="pref_camera_skinToneEnhancement_title">Skin Tone Enhancement</string>
    <string name="pref_camera_skinToneEnhancement_entry_enable">Enable</string>
    <string name="pref_camera_skinToneEnhancement_entry_disable">Disable</string>
    <string name="pref_camera_skinToneEnhancement_value_enable">enable</string>
    <string name="pref_camera_skinToneEnhancement_value_disable">disable</string>
    <string name="pref_camera_zsl_title">ZSL</string>
    <string name="pref_camera_zsl_default">on</string>
    <string name="pref_camera_selectablezoneaf_default">auto</string>
    <string name="pref_camera_selectablezoneaf_title">Selectable Zone Auto Focus</string>
    <string name="pref_camera_selectablezoneaf_entry_auto">Auto</string>
    <string name="pref_camera_selectablezoneaf_entry_spotmetering">Spot Metering</string>
    <string name="pref_camera_selectablezoneaf_entry_centerweighted">Center Weighted</string>
    <string name="pref_camera_selectablezoneaf_entry_frameaverage">Frame Average</string>
    <string name="pref_camera_selectablezoneaf_value_auto">auto</string>
    <string name="pref_camera_selectablezoneaf_value_spotmetering">spot-metering</string>
    <string name="pref_camera_selectablezoneaf_value_centerweighted">center-weighted</string>
    <string name="pref_camera_selectablezoneaf_value_frameaverage">frame-average</string>
    <string name="pref_camera_advanced_feature_default">none</string>
    <string name="pref_camera_advanced_features_title">Advanced Features</string>
    <string name="pref_camera_advanced_feature_entry_none">None</string>
    <string name="pref_camera_advanced_feature_entry_ubifocus">Ubi Focus</string>
    <string name="pref_camera_advanced_feature_entry_chromaflash">Chroma Flash</string>
    <string name="pref_camera_advanced_feature_entry_optizoom">Opti Zoom</string>
    <string name="pref_camera_advanced_feature_value_none">none</string>
    <string name="pref_camera_advanced_feature_value_ubifocus_on">af-bracket-on</string>
    <string name="pref_camera_advanced_feature_value_chromaflash_on">chroma-flash-on</string>
    <string name="pref_camera_advanced_feature_value_optizoom_on">opti-zoom-on</string>
    <string name="pref_camera_advanced_feature_value_ubifocus_off">af-bracket-off</string>
    <string name="pref_camera_advanced_feature_value_chromaflash_off">chroma-flash-off</string>
    <string name="pref_camera_advanced_feature_value_optizoom_off">opti-zoom-off</string>
    <string name="pref_camera_zsl_entry_off">Off</string>
    <string name="pref_camera_zsl_entry_on">On</string>
    <string name="pref_camera_zsl_value_off">off</string>
    <string name="pref_camera_zsl_value_on">on</string>
    <string name="pref_camera_video_hdr_entry_off">Off</string>
    <string name="pref_camera_video_hdr_entry_on">On</string>
    <string name="pref_camera_video_hdr_value_off">off</string>
    <string name="pref_camera_video_hdr_value_on">on</string>
    <string name="pref_camera_facedetection_default">on</string>
    <string name="pref_camera_facedetection_title">Face Detection</string>
    <string name="pref_camera_redeyereduction_default">disable</string>
    <string name="pref_camera_redeyereduction_title">Redeye Reduction</string>
    <string name="pref_camera_ae_bracket_hdr_title">AE-Bracket</string>
    <string name="pref_camera_ae_bracket_hdr_default">Off</string>
    <string name="pref_camera_denoise_title">Wavelet Denoise Mode</string>
    <string name="pref_camera_denoise_default">denoise-on</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_title">Select ISO</string>
    <string name="pref_camera_antibanding_title">Anti Banding</string>
    <string name="pref_camera_antibanding_default">50hz</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_coloreffect_title">Color effect</string>
    <string name="pref_camera_touchafaec_default">touch-on</string>
    <string name="pref_camera_touchafaec_title">Touch AF/AEC</string>
    <string name="pref_camera_facerc_title">Face Recognition</string>
    <string name="pref_camera_facerc_default">off</string>
    <string name="pref_camera_sharpness_title">Sharpness</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_jpegquality_default">superfine</string>
    <string name="pref_camera_picture_format_default">jpeg</string>
    <string name="pref_camera_picture_format_title">Select Picture Format</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_histogram_default">disable</string>
    <string name="pref_camera_histogram_title">Histogram</string>
    <string name="pref_camera_scenedetect_default">off</string>
    <string name="pref_camera_scenedetect_title">Auto Scene Detection</string>
    <string name="pref_camera_videosnapsize_default">1920x1080</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default">on</string>
    <string name="pref_camera_timer_title">Delayed photos</string>
    <string name="pref_camera_timer_default">0</string>
    <string name="pref_camera_timer_sound_default">@string/setting_off_value</string>
    <string name="pref_camera_timer_sound_title">Beep during countdown</string>
    <string name="pref_camera_savepath_title">Storage Position</string>
    <string name="pref_camera_savepath_default">0</string>
    <string name="setting_off_value">off</string>
    <string name="setting_on_value">on</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_flashmode_default">off</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_nightmode_default">auto</string>
    <string name="pref_camera_nightmode_title">Night</string>
    <string name="pref_camera_square_title">Square</string>
    <string name="pref_camera_submode_guide_title">Guide</string>
    <string name="pref_camera_hdrmode_default">auto</string>
    <string name="pref_camera_hdrmode_title">HDR</string>
    <string name="pref_camera_flip_title">Flip</string>
    <string name="pref_camera_flip_default">on</string>
    <string name="pref_camera_ois_title">OIS</string>
    <string name="pref_camera_scenemode_entry_hdr_plus">HDR+</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
    <string name="pref_camera_hdr_default">@string/setting_off_value</string>
    <string name="pref_camera_soundctl_default">@string/setting_on_value</string>
    <string name="pref_camera_hdr_plus_default">@string/setting_off_value</string>
    <string name="pref_camera_ois_default">@string/setting_off_value</string>
    <string name="pref_camera_scenemode_entry_hdr_title">HDR Taken</string>
    <string name="pref_camera_scenemode_entry_soundctl_title">Shutter Sound</string>
    <string name="pref_parent_title">Settings</string>
    <string name="pref_category_general_settings">General Settings</string>
    <string name="pref_title_resolution_quality">Resolution and quality</string>
    <string name="pref_title_record_location">Record Location</string>
    <string name="mode_panel_item_panorama">PANO</string>
    <string name="mode_panel_item_photo">PHOTO</string>
    <string name="mode_panel_item_video">VIDEO</string>
    <string name="mode_panel_item_slow_video">SLO-MO</string>
    <string name="pref_camera_one_key_restroe_title">Restore default</string>
    <string name="pref_camera_pose_default">@string/setting_off_value</string>
    <string name="pref_camera_pose_title">Pose</string>
    <string name="pref_camera_stable_capture_default">@string/setting_off_value</string>
    <string name="pref_camera_stable_capture_title">Stable capture</string>
    <string name="pref_camera_speech_capture_default">@string/setting_off_value</string>
    <string name="pref_camera_speech_capture_title">Voice control</string>
    <string name="speech_capture_tips">Take photos by saying \"photo\" or \"cheese\"</string>
    <string name="speech_skin_tips">Adjust beauty level by saying \"beauty\" or \"natural\"</string>
    <string name="speech_beauty_restore_tips">Clear facial settings by saying \"real\"</string>
    <string name="night_mode_auto">Auto</string>
    <string name="night_mode_quarter">1/4</string>
    <string name="night_mode_half">1/2</string>
    <string name="pref_title_iso">ISO</string>
    <string name="pref_title_scenemode">Scene mode</string>
    <string name="pref_title_whitebalance">White balance</string>
</resources>