<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.camera2">
    <IconListPreference camera:title="@string/pref_camera_flashmode_title" camera:key="pref_camera_flashmode_key" camera:defaultValue="@string/pref_camera_flashmode_default" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:entries="@array/pref_camera_flashmode_entries" camera:labelList="@array/pref_camera_flashmode_labels" camera:icons="@array/camera_flashmode_icons" camera:largeIcons="@array/camera_flashmode_largeicons" />
    <IconListPreference camera:title="@string/pref_exposure_title" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_exposure_default" camera:icon="@drawable/letv_camera_setting_exposure" camera:icons="@array/pref_camera_exposure_icons" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:icon="@drawable/letv_camera_sce_normal" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:icons="@array/pref_camera_scenemode_icons" />
    <IconListPreference camera:title="@string/pref_camera_hdrmode_title" camera:key="pref_camera_hdrmode_key" camera:defaultValue="@string/pref_camera_hdrmode_default" camera:entryValues="@array/pref_camera_hdrmode_entryvalues" camera:entries="@array/pref_camera_hdrmode_entries" camera:labelList="@array/pref_camera_hdrmode_labels" camera:icons="@array/pref_camera_hdrmode_icons" camera:largeIcons="@array/pref_camera_hdrmode_icons" />
    <IconListPreference camera:title="@string/pref_camera_nightmode_title" camera:key="pref_camera_nightmode_key" camera:defaultValue="@string/pref_camera_nightmode_default" camera:entryValues="@array/pref_camera_nightmode_entryvalues" camera:entries="@array/pref_camera_nightmode_entries" camera:labelList="@array/pref_camera_nightmode_labels" camera:icons="@array/pref_camera_nightmode_icons" camera:largeIcons="@array/pref_camera_nightmode_icons" />
    <IconListPreference camera:title="@string/pref_camera_square_title" camera:key="pref_camera_square_key" camera:defaultValue="@string/setting_off_value" camera:entryValues="@array/pref_camera_square_entryvalues" camera:entries="@array/pref_camera_square_entries" camera:labelList="@array/pref_camera_square_labels" camera:icons="@array/pref_camera_square_icons" camera:largeIcons="@array/pref_camera_square_icons" />
    <IconListPreference camera:title="@string/pref_camera_submode_guide_title" camera:key="pref_camera_submode_guide_key" camera:defaultValue="@string/setting_on_value" camera:entryValues="@array/pref_camera_submode_guide_entryvalues" camera:entries="@array/pref_camera_submode_guide_entries" />
    <IconListPreference camera:title="@string/pref_camera_submode_guide_title" camera:key="pref_camera_submode_tip_key" camera:defaultValue="@string/setting_on_value" camera:entryValues="@array/pref_camera_submode_guide_entryvalues" camera:entries="@array/pref_camera_submode_guide_entries" />
    <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:icon="@drawable/letv_camera_setting_white_balance_normal" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:labelList="@array/pref_camera_whitebalance_labels" camera:icons="@array/whitebalance_icons" camera:largeIcons="@array/whitebalance_largeicons" />
    <RecordLocationPreference camera:title="@string/pref_camera_recordlocation_title" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:labelList="@array/pref_camera_recordlocation_labels" camera:icons="@array/camera_recordlocation_icons" camera:largeIcons="@array/camera_recordlocation_largeicons" />
    <IconListPreference camera:title="@string/pref_camera_picturesize_title" camera:key="pref_camera_picturesize_key" camera:defaultValue="@array/pref_camera_picturesize_default" camera:entryValues="@array/pref_camera_pic_size_entryValues" camera:entries="@array/pref_camera_pic_size_entries" camera:icons="@array/pref_camera_pic_size_icons" />
    <IconListPreference camera:title="@string/pref_camera_picturesize_title" camera:key="pref_camera_picturesize_key_maxplus" camera:defaultValue="@array/pref_camera_picturesize_default_maxplus" camera:entryValues="@array/pref_camera_pic_size_entryValues_maxplus" camera:entries="@array/pref_camera_pic_size_entries_maxplus" camera:icons="@array/pref_camera_pic_size_icons_maxplus" />
    <ListPreference camera:title="@string/pref_camera_focusmode_title" camera:key="pref_camera_focusmode_key" camera:defaultValue="@array/pref_camera_focusmode_default_array" camera:entryValues="@array/pref_camera_focusmode_entryvalues" camera:entries="@array/pref_camera_focusmode_entries" camera:labelList="@array/pref_camera_focusmode_labels" />
    <ListPreference camera:title="@string/pref_camera_ae_bracket_hdr_title" camera:key="pref_camera_ae_bracket_hdr_key" camera:defaultValue="@string/pref_camera_ae_bracket_hdr_default" camera:entryValues="@array/pref_camera_ae_bracket_hdr_entryvalues" camera:entries="@array/pref_camera_ae_bracket_hdr_entries" />
    <IconListPreference camera:title="@string/pref_camera_id_title" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" camera:labelList="@array/camera_id_labels" camera:icons="@array/camera_id_icons" camera:largeIcons="@array/camera_id_largeicons" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_entry_hdr_title" camera:key="pref_camera_hdr_key" camera:defaultValue="@string/pref_camera_hdr_default" camera:entryValues="@array/pref_camera_hdr_entryvalues" camera:entries="@array/pref_camera_hdr_entries" camera:labelList="@array/pref_camera_hdr_labels" camera:icons="@array/pref_camera_hdr_icons" camera:largeIcons="@array/pref_camera_hdr_icons" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_entry_hdr_plus" camera:key="pref_camera_hdr_plus_key" camera:defaultValue="@string/pref_camera_hdr_plus_default" camera:entryValues="@array/pref_camera_hdr_plus_entryvalues" camera:entries="@array/pref_camera_hdr_plus_entries" camera:labelList="@array/pref_camera_hdr_plus_labels" camera:icons="@array/pref_camera_hdr_plus_icons" camera:largeIcons="@array/pref_camera_hdr_plus_icons" />
    <IconListPreference camera:title="@string/pref_camera_timer_title" camera:key="pref_camera_timer_key" camera:defaultValue="@string/pref_camera_timer_default" camera:entryValues="@array/pref_camera_timer_entryvalues" camera:entries="@array/pref_camera_timer_entries" camera:icons="@array/pref_camera_timer_icons" />
    <ListPreference camera:title="@string/pref_camera_timer_sound_title" camera:key="pref_camera_timer_sound_key" camera:defaultValue="@string/pref_camera_timer_sound_default" camera:entryValues="@array/pref_camera_timer_sound_entryvalues" camera:entries="@array/pref_camera_timer_sound_entries" />
    <ListPreference camera:title="@string/pref_camera_scenedetect_title" camera:key="pref_camera_scenedetect_key" camera:defaultValue="@string/pref_camera_scenedetect_default" camera:entryValues="@array/pref_camera_scenedetect_entryvalues" camera:entries="@array/pref_camera_scenedetect_entries" />
    <ListPreference camera:title="@string/pref_camera_facerc_title" camera:key="pref_camera_facerc_key" camera:defaultValue="@string/pref_camera_facerc_default" camera:entryValues="@array/pref_camera_facerc_entryvalues" camera:entries="@array/pref_camera_facerc_entries" />
    <ListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_camera_coloreffect_key" camera:defaultValue="@string/pref_camera_coloreffect_default" camera:entryValues="@array/pref_camera_coloreffect_entryvalues" camera:entries="@array/pref_camera_coloreffect_entries" />
    <ListPreference camera:title="@string/pref_camera_jpegquality_title" camera:key="pref_camera_jpegquality_key" camera:defaultValue="@string/pref_camera_jpegquality_default" camera:entryValues="@array/pref_camera_jpegquality_entryvalues" camera:entries="@array/pref_camera_jpegquality_entries" />
    <ListPreference camera:title="@string/pref_camera_touchafaec_title" camera:key="pref_camera_touchafaec_key" camera:defaultValue="@string/pref_camera_touchafaec_default" camera:entryValues="@array/pref_camera_touchafaec_entryvalues" camera:entries="@array/pref_camera_touchafaec_entries" />
    <IconListPreference camera:title="@string/pref_camera_iso_title" camera:key="pref_camera_iso_key" camera:defaultValue="@string/pref_camera_iso_default" camera:icon="@drawable/letv_camera_iso_normal" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:entries="@array/pref_camera_iso_entries" camera:icons="@array/pref_camera_iso_icons" camera:largeIcons="@array/pref_camera_iso_large_icons" />
    <ListPreference camera:title="@string/pref_camera_histogram_title" camera:key="pref_camera_histogram_key" camera:defaultValue="@string/pref_camera_histogram_default" camera:entryValues="@array/pref_camera_histogram_entryvalues" camera:entries="@array/pref_camera_histogram_entries" />
    <ListPreference camera:title="@string/pref_camera_antibanding_title" camera:key="pref_camera_antibanding_key" camera:defaultValue="@string/pref_camera_antibanding_default" camera:entryValues="@array/pref_camera_antibanding_entryvalues" camera:entries="@array/pref_camera_antibanding_entries" />
    <ListPreference camera:title="@string/pref_camera_picture_format_title" camera:key="pref_camera_pictureformat_key" camera:defaultValue="@string/pref_camera_picture_format_default" camera:entryValues="@array/pref_camera_picture_format_entryvalues" camera:entries="@array/pref_camera_picture_format_entries" />
    <ListPreference camera:title="@string/pref_camera_sharpness_title" camera:key="pref_camera_sharpness_key" camera:defaultValue="@array/pref_camera_sharpness_default" camera:icon="@drawable/letv_camera_sharpness_normal" camera:entryValues="@array/pref_camera_multilevel_sharpness_entryvalues" camera:entries="@array/pref_camera_sharpness_entries" />
    <ListPreference camera:title="@string/pref_camera_contrast_title" camera:key="pref_camera_contrast_key" camera:defaultValue="@array/pref_camera_contrast_default" camera:icon="@drawable/letv_camera_contrast_normal" camera:entryValues="@array/pref_camera_multilevel_entryvalues" camera:entries="@array/pref_camera_contrast_entries" />
    <ListPreference camera:title="@string/pref_camera_saturation_title" camera:key="pref_camera_saturation_key" camera:defaultValue="@array/pref_camera_saturation_default" camera:icon="@drawable/letv_camera_saturation_normal" camera:entryValues="@array/pref_camera_multilevel_entryvalues" camera:entries="@array/pref_camera_saturation_entries" />
    <ListPreference camera:title="@string/pref_camera_denoise_title" camera:key="pref_camera_denoise_key" camera:defaultValue="@string/pref_camera_denoise_default" camera:entryValues="@array/pref_camera_denoise_entryvalues" camera:entries="@array/pref_camera_denoise_entries" />
    <ListPreference camera:title="@string/pref_camera_autoexposure_title" camera:key="pref_camera_autoexposure_key" camera:defaultValue="@string/pref_camera_autoexposure_default" camera:entryValues="@array/pref_camera_autoexposure_entryvalues" camera:entries="@array/pref_camera_autoexposure_entries" />
    <ListPreference camera:title="@string/pref_camera_skinToneEnhancement_title" camera:key="pref_camera_skinToneEnhancement_key" camera:defaultValue="@string/pref_camera_skinToneEnhancement_default" camera:entryValues="@array/pref_camera_skinToneEnhancement_entryvalues" camera:entries="@array/pref_camera_skinToneEnhancement_entries" />
    <ListPreference camera:title="@string/pref_camera_facedetection_title" camera:key="pref_camera_facedetection_key" camera:defaultValue="@string/pref_camera_facedetection_default" camera:entryValues="@array/pref_camera_facedetection_entryvalues" camera:entries="@array/pref_camera_facedetection_entries" />
    <ListPreference camera:title="@string/pref_camera_redeyereduction_title" camera:key="pref_camera_redeyereduction_key" camera:defaultValue="@string/pref_camera_redeyereduction_default" camera:entryValues="@array/pref_camera_redeyereduction_entryvalues" camera:entries="@array/pref_camera_redeyereduction_entries" />
    <ListPreference camera:title="@string/pref_camera_selectablezoneaf_title" camera:key="pref_camera_selectablezoneaf_key" camera:defaultValue="@string/pref_camera_selectablezoneaf_default" camera:entryValues="@array/pref_camera_selectablezoneaf_entryvalues" camera:entries="@array/pref_camera_selectablezoneaf_entries" />
    <ListPreference camera:title="@string/pref_camera_zsl_title" camera:key="pref_camera_zsl_key" camera:defaultValue="@string/pref_camera_zsl_default" camera:entryValues="@array/pref_camera_zsl_entryvalues" camera:entries="@array/pref_camera_zsl_entries" />
    <ListPreference camera:title="@string/pref_camera_savepath_title" camera:key="pref_camera_savepath_key" camera:defaultValue="@string/pref_camera_savepath_default" camera:entryValues="@array/pref_camera_savepath_entryvalues" camera:entries="@array/pref_camera_savepath_entries" />
    <ListPreference camera:title="@string/pref_camera_picturesize_title" camera:key="pref_camera_videosnapsize_key" camera:defaultValue="@string/pref_camera_videosnapsize_default" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:entries="@array/pref_camera_picturesize_entries" />
    <ListPreference camera:title="@string/pref_camera_advanced_features_title" camera:key="pref_camera_advanced_features_key" camera:defaultValue="@string/pref_camera_advanced_feature_default" camera:entryValues="@array/pref_camera_advanced_features_entryvalues" camera:entries="@array/pref_camera_advanced_features_entries" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_entry_soundctl_title" camera:key="pref_camera_soundctl_key" camera:defaultValue="@string/pref_camera_soundctl_default" camera:entryValues="@array/pref_camera_soundctl_entryvalues" camera:entries="@array/pref_camera_soundctl_entries" camera:labelList="@array/pref_camera_soundctl_labels" camera:icons="@array/pref_camera_soundctl_icons" camera:largeIcons="@array/pref_camera_soundctl_icons" />
    <IconListPreference camera:title="@string/pref_camera_ois_title" camera:key="pref_camera_ois_key" camera:defaultValue="@string/pref_camera_ois_default" camera:icon="@drawable/letv_camera_ois_normal" camera:entryValues="@array/pref_camera_ois_entryvalues" camera:entries="@array/pref_camera_ois_entries" camera:icons="@array/pref_camera_ois_icons" camera:largeIcons="@array/pref_camera_ois_icons" />
    <ListPreference camera:title="@string/pref_camera_one_key_restroe_title" camera:key="pref_camera_one_key_restore_key" camera:icon="@drawable/letv_camera_restore_normal" />
    <IconListPreference camera:title="@string/pref_camera_pose_title" camera:key="pref_camera_pose" camera:defaultValue="@string/pref_camera_pose_default" camera:entryValues="@array/pref_camera_pose_entryvalues" camera:entries="@array/pref_camera_pose_entries" camera:icons="@array/pref_camera_pose_icons" />
    <IconListPreference camera:title="@string/pref_camera_stable_capture_title" camera:key="pref_camera_stable_capture" camera:defaultValue="@string/pref_camera_stable_capture_default" camera:entryValues="@array/pref_camera_stable_capture_entryvalues" camera:entries="@array/pref_camera_stable_capture_entries" camera:icons="@array/pref_camera_stable_capture_icons" />
    <IconListPreference camera:title="@string/pref_camera_speech_capture_title" camera:key="pref_camera_speech_capture" camera:defaultValue="@string/pref_camera_speech_capture_default" camera:entryValues="@array/pref_camera_speech_entryvalues" camera:entries="@array/pref_camera_speech_entries" camera:icons="@array/pref_camera_speech_icons" />
    <IconListPreference camera:title="@string/pref_camera_flip_title" camera:key="pref_camera_flip" camera:defaultValue="@string/pref_camera_flip_default" camera:entryValues="@array/pref_camera_flip_entryvalues" camera:entries="@array/pref_camera_flip_entries" camera:icons="@array/pref_camera_flip_icons" />
</PreferenceGroup>