<?xml version="1.0" encoding="utf-8"?>
<com.android.camera.ui.RotateLayout android:id="@id/speech_tips" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/speech_tips_total" android:background="@drawable/grid_item_bg" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/speech_tips_title_text_color" android:id="@id/speech_tip_capture" android:padding="@dimen/speech_tips_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/speech_capture_tips" />
            <TextView android:textColor="@color/speech_tips_title_text_color" android:id="@id/speech_tip_skin" android:paddingLeft="@dimen/speech_tips_padding" android:paddingRight="@dimen/speech_tips_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/speech_skin_tips" />
            <TextView android:textColor="@color/speech_tips_title_text_color" android:id="@id/speech_tip_real" android:padding="@dimen/speech_tips_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/speech_beauty_restore_tips" />
        </LinearLayout>
    </RelativeLayout>
</com.android.camera.ui.RotateLayout>